Fix upload of image with detect face

--- a/public/app/tpls/front/index.html
+++ b/public/app/tpls/front/index.html
@@ -21,7 +21,7 @@
         
         <div class="form-group">
             <label class="control-label" for="file">Single</label>
-            <input type="file" nv-file-select="" id="file" uploader="uploader" />
+            <input type="file" nv-file-select="" style-file uploader="uploader" multiple/> 
         </div>
     </div>
 
