--- a/public/app/tpls/front/index.html
+++ b/public/app/tpls/front/index.html
@@ -1,24 +1,14 @@
 <div class="row">
-    <div class="col-xs-12 col-md-6"> 
-        <form name="formName"> 
-           <div class="form-group"> 
-                <label>Ui-Validate</label>
-                <div class="input-group"> 
-                    <input name="inputName" ui-validate=" {taken : 'nameHasNotBeenUsed($value)' } " ng-pattern="/^[a-zA-Z]*$/" ng-class="{ 'permission-input-wrong': formName.inputName.$error.taken }" required ng-model="inputModel" type="text" class="form-control"> 
-                </div>  
-                <span ng-show='formName.inputName.$error.taken'>Este correo electrónico ya está en uso.</span> 
-           </div> 
-        </form>
-
-        <!-- <form name="registerform" ng-submit="register(registerform)" ng-validate="validationOptions"> -->
-        <form name="registerform" ng-submit="register(registerform)" ng-validate="{rules: {email: true}}">
+    <div class="col-xs-12 col-md-6">
+        <form name="fileForm"> 
             <div class="form-group">
-                <label>Ng-Validate</label>
-                <input type="email" name="email">
-                <input type="password" name="password">
+                <input type="file" file-model="image">
+                <button class="btn btn-info" ng-click="uploadImage()">Enviar</button>
             </div>
-        </form>
-        
+        </form>        
+    </div> 
+
+    <div class="col-xs-12 col-md-6"> 
         <div class="form-group">
             <label class="control-label" for="file">Single</label>
             <input type="file" nv-file-select="" style-file uploader="uploader" multiple/> 
@@ -68,63 +58,5 @@
                 </tr>
             </tbody>
         </table>
-        <!--
-        <div>
-            <div>
-                Queue progress:
-                <div class="progress" style="">
-                    <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
-                </div>
-            </div>
-            <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()" ng-disabled="!uploader.getNotUploadedItems().length">
-                <span class="glyphicon glyphicon-upload"></span> Upload all
-            </button>
-            <button type="button" class="btn btn-warning btn-s" ng-click="uploader.cancelAll()" ng-disabled="!uploader.isUploading">
-                <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
-            </button>
-            <button type="button" class="btn btn-danger btn-s" ng-click="uploader.clearQueue()" ng-disabled="!uploader.queue.length">
-                <span class="glyphicon glyphicon-trash"></span> Remove all
-            </button>
-        </div>
-        -->
     </div>
 </div>
-
-<!--
-<div class="row">
-	<div class="col-xs-12 col-md-12">	
-		<div id="uploader">
-			<div class="page-header">
-			    <h1>Uploader</h1>
-			</div>
-			<div class="row">
-			    <div class="col-md-6">
-			        <h3>What?</h3>
-			        <p>Upload multiple files at the same time.</p>
-			        <div class="well">
-			            <div>
-			                <div style="float:right;">
-			                    <button ng-click="btn_upload()">Cargar</button>
-			                    <button ng-click="btn_clean()">Eliminar</button>
-			                </div>
-			                <input type="file" id="file1" multiple/>
-			            </div>
-			            <div ng-repeat="file in files" style="margin-top: 20px; border-bottom-color: antiquewhite; border-bottom-style: double;">
-			                <div>
-			                	<span>{{file.name}}</span>
-			                	<div style="float:right;">
-			                		<span>{{file.humanSize}}</span>
-		                			<a ng-click="btn_remove(file)" title="Remove from list to be uploaded">
-		                				<i class="icon-remove"></i>
-		                			</a>
-			                	</div>
-			                </div>
-			                <progress style="width:400px;" value="{{file.loaded}}" max="{{file.size}}"></progress>
-			            </div>
-			        </div>
-			    </div>
-			</div>
-		</div>
-	</div>
-</div>
--->
