--- a/public/app/tpls/front/index.html
+++ b/public/app/tpls/front/index.html
@@ -2,12 +2,21 @@
     <div class="col-xs-12 col-md-6">
         <form name="fileForm"> 
             <div class="form-group">
-                <input type="file" file-model="image">
-                <button class="btn btn-info" ng-click="uploadImage()">Enviar</button>
+                <input type="file" style-file file-model="image">
             </div>
-        </form>        
+            <div class="form-group">
+                <img id="img" src="" alt="your image"/>
+            </div>
+            <button class="btn btn-info" ng-click="uploadImage(image)">Enviar</button>
+        </form>     
     </div> 
-
+    <div class="col-xs-12 col-md-6">
+        <div class="page-header">
+            <h4>Respuesta</h4>
+        </div>
+        <div id="results"></div>   
+    </div>
+    <!--
     <div class="col-xs-12 col-md-6"> 
         <div class="form-group">
             <label class="control-label" for="file">Single</label>
@@ -59,4 +68,5 @@
             </tbody>
         </table>
     </div>
+    -->
 </div>
